# deepin-gomoku

./: CMakeLists.txt  README.md  linglong.yaml
.tx/: config  transifex.yaml
debian/: changelog  com.deepin.gomoku.1  control  copyright  deepin-gomoku.1  manpages  rules
gomoku/: CMakeLists.txt
gomoku/assets/: com.deepin.gomoku.desktop  deepin-gomoku.desktop  resources.qrc
gomoku/assets/com-deepin-gomoku/gomoku/: 修订记录.txt
gomoku/assets/com-deepin-gomoku/gomoku/zh_CN/: calendar.md
gomoku/assets/com-deepin-gomoku/gomoku/zh_HK/: calendar.md
gomoku/src/: constants.h  ddlog.h  globaltool.cpp  globaltool.h  gomokuapplication.cpp  gomokuapplication.h  main.cpp
gomoku/src/game/: pub.h
gomoku/src/game/artificialintelligence/: artificialintelligence.cpp  artificialintelligence.h  calculatescore.cpp  calculatescore.h  chessfromjudge.cpp  chessfromjudge.h
gomoku/src/game/gamecontrol/: checkerboard.cpp  checkerboard.h  gamecontrol.cpp  gamecontrol.h
gomoku/src/judge/: artificialintelligence.cpp  artificialintelligence.h  chessjudgeresult.cpp  chessjudgeresult.h  gamecontrol.cpp  gamecontrol.h
gomoku/src/widget/: checkerboard.cpp  checkerboard.h  gomokumainwindow.cpp  gomokumainwindow.h
gomoku/src/widget/buttonfunction/: btmusiccontrol.cpp  btmusiccontrol.h  btreplay.cpp  btreplay.h  btstartpause.cpp  btstartpause.h  buttonitem.cpp  buttonitem.h
gomoku/src/widget/buttonwidget/: btmusiccontrol.cpp  btmusiccontrol.h  btreplay.cpp  btreplay.h  btstartpause.cpp  btstartpause.h  buttonbase.cpp  buttonbase.h  buttonitem.cpp  buttonitem.h  buttonscene.cpp  buttonscene.h
gomoku/src/widget/checkerboard/: checkerboarditem.cpp  checkerboarditem.h  checkerboardscene.cpp  checkerboardscene.h
gomoku/src/widget/checkerboardwidget/: checkerboarditem.cpp  checkerboarditem.h  checkerboardscene.cpp  checkerboardscene.h  checkerboardview.cpp  checkerboardview.h
gomoku/src/widget/chess/: chessitem.cpp  chessitem.h
gomoku/src/widget/chesswidget/: chessitem.cpp  chessitem.h
gomoku/src/widget/exitdialog/: cancelbutton.cpp  cancelbutton.h  exitbutton.cpp  exitbutton.h  exitdialog.cpp  exitdialog.h  exitlabel.cpp  exitlabel.h
gomoku/src/widget/playingscreen/: playingscreen.cpp  playingscreen.h
gomoku/src/widget/resultpopup/: buttonagain.cpp  buttonagain.h  buttonrest.cpp  buttonrest.h  closepopup.cpp  closepopup.h  resultinfo.cpp  resultinfo.cpp.autosave  resultinfo.h  resultpopup.cpp  resultpopup.h
gomoku/src/widget/selectchess/: chessselected.cpp  chessselected.h  determinebutton.cpp  determinebutton.h  selectbutton.cpp  selectbutton.h  selectchess.cpp  selectchess.h  selectinfo.cpp  selectinfo.h
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: ut_gomokuapplication.cpp  ut_gomokuapplication.h  ut_main.cpp
tests/src/game/artificialintelligence/: ut_artificialintelligence.cpp  ut_artificialintelligence.h  ut_calculatescore.cpp  ut_calculatescore.h  ut_chessfromjudge.cpp  ut_chessfromjudge.h
tests/src/game/gamecontrol/: ut_checkerboard.cpp  ut_checkerboard.h  ut_gamecontrol.cpp  ut_gamecontrol.h
tests/src/widget/: ut_gomokumainwindow.cpp  ut_gomokumainwindow.h
tests/src/widget/buttonfunction/: ut_btmusiccontrol.cpp  ut_btmusiccontrol.h  ut_btreplay.cpp  ut_btreplay.h  ut_btstartpause.cpp  ut_btstartpause.h  ut_buttonitem.cpp  ut_buttonitem.h
tests/src/widget/checkerboard/: ut_checkerboarditme.cpp  ut_checkerboarditme.h  ut_checkerboardscene.cpp  ut_checkerboardscene.h
tests/src/widget/chess/: ut_chessitem.cpp  ut_chessitem.h
tests/src/widget/exitdialog/: ut_cancelbutton.cpp  ut_cancelbutton.h  ut_exitbutton.cpp  ut_exitbutton.h  ut_exitdialog.cpp  ut_exitdialog.h  ut_exitlabel.cpp  ut_exitlabel.h
tests/src/widget/playingscreen/: ut_playingscreen.cpp  ut_playingscreen.h
tests/src/widget/resultpopup/: ut_buttonagain.cpp  ut_buttonagain.h  ut_buttonrest.cpp  ut_buttonrest.h  ut_closepopup.cpp  ut_closepopup.h  ut_resuleinfo.cpp  ut_resuleinfo.h  ut_resultpopup.cpp  ut_resultpopup.h
tests/src/widget/selectchess/: ut_chessselected.cpp  ut_chessselected.h  ut_determinebutton.cpp  ut_determinebutton.h  ut_selectbutton.cpp  ut_selectbutton.h  ut_selectchess.cpp  ut_selectchess.h  ut_selectinfo.cpp  ut_selectinfo.h
translations/: com-deepin-gomoku.ts  com-deepin-gomoku_de.ts  com-deepin-gomoku_fi.ts  com-deepin-gomoku_hu.ts  com-deepin-gomoku_nl.ts  com-deepin-gomoku_pl.ts  com-deepin-gomoku_pt_BR.ts  com-deepin-gomoku_ru.ts  com-deepin-gomoku_sq.ts  com-deepin-gomoku_uk.ts  com-deepin-gomoku_zh_CN.ts  com-deepin-gomoku_zh_HK.ts  com-deepin-gomoku_zh_TW.ts  com.deepin.gomoku.ts  deepin-gomoku.ts  deepin-gomoku_ady.ts  deepin-gomoku_af.ts  deepin-gomoku_am_ET.ts  deepin-gomoku_ar.ts  deepin-gomoku_ast.ts  deepin-gomoku_az.ts  deepin-gomoku_bg.ts  deepin-gomoku_bn.ts  deepin-gomoku_bo.ts  deepin-gomoku_bqi.ts  deepin-gomoku_br.ts  deepin-gomoku_ca.ts  deepin-gomoku_cs.ts  deepin-gomoku_da.ts  deepin-gomoku_de.ts  deepin-gomoku_el.ts  deepin-gomoku_en_AU.ts  deepin-gomoku_eo.ts  deepin-gomoku_es.ts  deepin-gomoku_et.ts  deepin-gomoku_eu.ts  deepin-gomoku_fa.ts  deepin-gomoku_fi.ts  deepin-gomoku_fil.ts  deepin-gomoku_fr.ts  (+50 more)
(+3 files in other folders)
